# chess_game

./: CMakeLists.txt  Dockerfile  README.md  collect_libs.sh
data/: resources.xml
src/: game.cpp  game.h  main.cpp
